--- a/myapps/src/main/webapp/WEB-INF/web.xml
+++ b/myapps/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,18 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>MyApps Created Web Application</display-name>
+	<display-name>MyApps Created Web Application</display-name>
+  
+  	<!-- 
+  	
+  	 -->
+	<filter>
+		<filter-name>encoding</filter-name>
+		<filter-class>com.zgt.digital.web.filter.EncodingFilter</filter-class>
+	</filter>
+	 
+	<filter-mapping>
+		<filter-name>encoding</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
