--- a/myapps/src/main/webapp/WEB-INF/web.xml
+++ b/myapps/src/main/webapp/WEB-INF/web.xml
@@ -5,16 +5,27 @@
 <web-app>
 	<display-name>MyApps Created Web Application</display-name>
   
-  	<!-- 
+  	<filter>
+  		<filter-name>jfinal</filter-name>
+  		<filter-class>com.jfinal.core.JFinalFilter</filter-class>
+  		<init-param>
+  			<param-name>jfinalConfig</param-name>
+  			<param-value>vip.zgt.app.core.MyAppConfig</param-value>
+  		</init-param>
+  	</filter>
   	
-  	 -->
 	<filter>
 		<filter-name>encoding</filter-name>
-		<filter-class>com.zgt.digital.web.filter.EncodingFilter</filter-class>
+		<filter-class>vip.zgt.app.web.filter.EncodingFilter</filter-class>
 	</filter>
 	 
 	<filter-mapping>
 		<filter-name>encoding</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<filter-mapping>
+  		<filter-name>jfinal</filter-name>
+  		<url-pattern>/*</url-pattern>
+  	</filter-mapping>
 </web-app>
