--- a/myapps/src/main/webapp/WEB-INF/web.xml
+++ b/myapps/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
   		<filter-name>jfinal</filter-name>
   		<filter-class>com.jfinal.core.JFinalFilter</filter-class>
   		<init-param>
-  			<param-name>jfinalConfig</param-name>
+  			<param-name>configClass</param-name>
   			<param-value>vip.zgt.app.core.MyAppConfig</param-value>
   		</init-param>
   	</filter>
