--- a/myapps/src/main/resources/db.properties
+++ b/myapps/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 #c3p0 config
-jdbcUrl=jdbc:mysql://localhost:3306/myapps
+jdbcUrl=jdbc:mysql://localhost:3306/test
 user=root
 password=root
 driverClass=com.mysql.jdbc.Driver
