--- a/myapps/src/main/resources/db.properties
+++ b/myapps/src/main/resources/db.properties
@@ -1,15 +1,21 @@
 #c3p0 config
-jdbcUrl=jdbc:mysql://localhost:3306/test
-user=root
-password=root
-driverClass=com.mysql.jdbc.Driver
+jdbcUrl_YY=jdbc:mysql://localhost:3306/yy
+user_YY=root
+password_YY=root
+driverClass_YY=com.mysql.jdbc.Driver
+
+jdbcUrl_TEST=jdbc:mysql://localhost:3306/test
+user_TEST=root
+password_TEST=root
+driverClass_TEST=com.mysql.jdbc.Driver
+
+
+#acdbcp
 maxPoolSize=50
 minPoolSize=10
 initialPoolSize=10
 maxIdleTime=10
 acquireIncrement=10
-
-#acdbcp
 initialSize=10
 maxActive=50
 maxIdle=20
