--- a/myapps/src/main/webapp/WEB-INF/web.xml
+++ b/myapps/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,16 @@
 		<filter-name>encoding</filter-name>
 		<filter-class>vip.zgt.app.web.filter.EncodingFilter</filter-class>
 	</filter>
+
+	<filter>
+		<filter-name>auth</filter-name>
+		<filter-class>vip.zgt.app.web.filter.AuthFilter</filter-class>
+	</filter>
+	 
+	<filter-mapping>
+		<filter-name>auth</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	 
 	<filter-mapping>
 		<filter-name>encoding</filter-name>
