--- a/myapps/pom.xml
+++ b/myapps/pom.xml
@@ -88,7 +88,21 @@
 			<artifactId>velocity</artifactId>
 			<version>1.7</version>
 		</dependency>
-		
+
+		<!-- JavaMail api -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.5.5</version>
+		</dependency>
+
+		<!-- JavaMail-Logger api -->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.5</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>myapps</finalName>
