--- a/myapps/src/main/resources/db.properties
+++ b/myapps/src/main/resources/db.properties
@@ -1,10 +1,10 @@
 #c3p0 config
-jdbcUrl_YY=jdbc:mysql://localhost:3306/yy
+jdbcUrl_YY=jdbc:mysql://localhost:3306/yy?characterEncoding=utf-8
 user_YY=root
 password_YY=root
 driverClass_YY=com.mysql.jdbc.Driver
 
-jdbcUrl_TEST=jdbc:mysql://localhost:3306/test
+jdbcUrl_TEST=jdbc:mysql://localhost:3306/test?characterEncoding=utf8
 user_TEST=root
 password_TEST=root
 driverClass_TEST=com.mysql.jdbc.Driver
