--- a/myapps/src/main/resources/db.properties
+++ b/myapps/src/main/resources/db.properties
@@ -4,10 +4,10 @@ user_YY=root
 password_YY=root
 driverClass_YY=com.mysql.jdbc.Driver
 
-jdbcUrl_TEST=jdbc:mysql://localhost:3306/test?characterEncoding=utf8
-user_TEST=root
-password_TEST=root
-driverClass_TEST=com.mysql.jdbc.Driver
+jdbcUrl_GT3=jdbcUrl=jdbc:oracle:thin:@192.168.80.133:1521:orcl
+user_GT3=taxinspect
+password_GT3=taxinspect123
+driverClass_GT3=oracle.jdbc.driver.OracleDriver
 
 
 #acdbcp
