--- a/myapps/pom.xml
+++ b/myapps/pom.xml
@@ -64,7 +64,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.9</version>
+			<version>1.2.17</version>
 		</dependency>
 
 		<!-- poi -->
@@ -89,10 +89,13 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.hynnet/oracle-driver-ojdbc -->
+		<!-- <dependency> <groupId>com.hynnet</groupId> <artifactId>oracle-driver-ojdbc</artifactId> 
+			<version>12.1.0.2</version> </dependency> -->
+
 		<dependency>
-			<groupId>com.hynnet</groupId>
-			<artifactId>oracle-driver-ojdbc</artifactId>
-			<version>12.1.0.2</version>
+			<groupId>cn.easyproject</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0.4</version>
 		</dependency>
 
 
@@ -117,8 +120,24 @@
 			<version>1.5.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-solrj</artifactId>
+			<version>6.3.0</version>
+		</dependency>
 	</dependencies>
+
 	<build>
 		<finalName>myapps</finalName>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
