--- a/myapps/src/main/resources/db.properties
+++ b/myapps/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 #c3p0 config
-jdbcUrl_YY=jdbc:mysql://localhost:3306/yy?characterEncoding=utf-8
+jdbcUrl_YY=jdbc:mysql://localhost:3306/yy?characterEncoding=utf-8&useSSL=false
 user_YY=root
 password_YY=root
 driverClass_YY=com.mysql.jdbc.Driver
