--- a/myapps/src/main/resources/db.properties
+++ b/myapps/src/main/resources/db.properties
@@ -4,9 +4,9 @@ user_YY=root
 password_YY=root
 driverClass_YY=com.mysql.jdbc.Driver
 
-jdbcUrl_GT3=jdbc:oracle:thin:@192.168.80.133:1521:orcl
-user_GT3=taxinspect
-password_GT3=taxinspect123
+jdbcUrl_GT3=jdbc:oracle:thin:@10.2.100.15:1521:sjfhdb
+user_GT3=ufaud
+password_GT3=ufaud
 driverClass_GT3=oracle.jdbc.driver.OracleDriver
 
 
