# 修复solr报错的bug

--- a/myapps/src/main/resources/solr.properties
+++ b/myapps/src/main/resources/solr.properties
@@ -1,6 +1,6 @@
 url=http://localhost:8983/solr/collection1
-connectionTimeout=100
+connectionTimeout=60000
 defaltMaxConnectionsPerHost=100
 maxTotalConnections=100
-followRedirects=false
+followRedirects=true
 allowCompression=true
